syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.libs.grpc";
option java_outer_classname = "CatalogProto";

service CatalogService {
  rpc Catalogs (CatalogRequest) returns (CatalogReply) {}
}

message CatalogRequest {
  optional int64 id = 1;
}

message CatalogReply {
  int64 total = 1;
  repeated Catalog catalogs = 2;
}

message Catalog {
  int64 id = 1;
  string name = 2;
  string content = 3;
  string updateDate = 4;
  string updateId = 5;
}